--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "coffee-script": "^1.8.0",
     "ejson": "^1.0.1",
     "express": "^4.9.8",
-    "jade": "^1.7.0",
     "lodash": "^2.4.1",
     "request": "^2.45.0"
-  }
+  },
+  "devDependencies": {}
 }
